[package]
name = "NoSQL_injection_attack"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.3"
tokio = { version = "1", features = ["full"] }
handlebars = { version = "4.3", features = ["dir_source"] }
dotenv = "0.15"
futures = "0.3.31"

[[bin]]
name = "populate_db"
path = "src/populate_db.rs"
